--- a/Chess/ChessLibrary.csproj
+++ b/Chess/ChessLibrary.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D3EA0847-FC19-4C26-8FCB-D2FFADCC509C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Chess</RootNamespace>
+    <RootNamespace>ChessLibrary</RootNamespace>
     <AssemblyName>ChessLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -44,6 +44,8 @@
     <Compile Include="Chess.cs" />
     <Compile Include="Color.cs" />
     <Compile Include="Figure.cs" />
+    <Compile Include="FigureMoving.cs" />
+    <Compile Include="FigureOnSquare.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Square.cs" />
   </ItemGroup>
